--- a/Steganography_154048G/Steganography_154048G.csproj
+++ b/Steganography_154048G/Steganography_154048G.csproj
@@ -84,5 +84,8 @@
   <ItemGroup>
     <None Include="Resources\click to upload.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\click to upload1.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
